# hmo_mms

./: README.md
backend/: .gitignore  .pre-commit-config.yaml  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1a9da5d83261_sync_department_table.py  476fbcb0a384_设置user_mc_name为nullable.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  login.py
backend/app/core/: config.py  database.py  logger.py  middleware.py
backend/app/handler/: auth.py  member.py  profile.py  signup.py
backend/app/model/: __init__.py  user.py
backend/app/schema/: auth.py  login.py  member.py  profile.py  signup.py
backend/app/utils/: __init__.py  get_current_user.py  middleware.py  permission.py
backend/data/: test.db
frontend/: eslint.config.mjs  nuxt.config.ts  package.json  pnpm-lock.yaml
frontend/app/: app.config.ts
frontend/app/apis/: auth.ts  member.ts  profile.ts  request.ts  signup.ts
frontend/app/assets/css/: main.css
frontend/app/components/base/: Header.vue  Section.vue
frontend/app/components/members/: search.vue  table.vue
frontend/app/layouts/: default.vue
frontend/app/middleware/: auth.ts
frontend/app/pages/: dashboard.vue  index.vue  login.vue  signup.vue
frontend/app/pages/members/: index.vue
frontend/app/pages/profile/: change-password.vue  index.vue  update.vue
frontend/app/stores/: user.ts
frontend/app/utils/: request.ts  url.ts
