[project]
name = "backend"
version = "0.1.0"
description = "湖南大学岳麓幻境社社员管理系统 HMO Member Management System 后端."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.16.5",
    "fastapi>=0.118.0",
    "fastapi-sessions>=0.3.2",
    "loguru>=0.7.3",
    "pydantic-settings>=2.11.0",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.37.0",
    "werkzeug>=3.1.3",
]

[dependency-groups]
dev = [
    "alembic>=1.16.5",
    "pre-commit>=4.3.0",
]
